# kourain_lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/: property_tracker.py
src/dynamic_property/: set.py
src/kourain_lib/: id_generate.py  property_tracker.py
src/kourain_lib/dynamic_property/: dict.py  list.py
